--- a/style/style.scss
+++ b/style/style.scss
@@ -1,7 +1,95 @@
 @import 'compass/css3';
+@import "compass/css3/user-interface";
 
 body {
-  background-color: #000000;
-  margin: 0px;
+  // Willow theme: http://kuler.adobe.com/#themeID/2066229
+  $seafoam: #C8E595;
+  $olive:   #A5B26B;
+  $clay:    #8C8261;
+  $kabul:   #594138;
+  $dune:    #333130;
+  @include user-select('none');
+  background-color: $kabul;
+  cursor: default;
+  margin: 0;
   overflow: hidden;
+  padding: 0;
+  canvas {
+    left: 0;
+    position: absolute;
+    top: 0;
+  }
+  .dashboard {
+    @include border-radius(12px);
+    background: rgba(0, 0, 0, 0.5);
+    color: $seafoam;
+    font-family: Arial, sans-serif;
+    font-size: 1.2em;
+    text-shadow: 1px 1px 1px black;
+    margin: 20px;
+    padding: 10px 10px 20px;
+    position: relative;
+    width: auto;
+    h1 {
+      font-size: 1.4em;
+      margin: 0 0 15px;
+      padding: 0;
+    }
+    a {
+      cursor: pointer;
+    }
+    .hide {
+      $button_size: 20px;
+      height: $button_size;
+      width:  $button_size;
+      cursor: pointer;
+
+      padding: 0;
+      position: absolute;
+      top:   $button_size / -2;
+      left:  $button_size / -2;
+
+      display: inline-block;
+      @include border-radius(100%);
+      @include box-shadow(0 0 1px black);
+      @include            background-image(radial-gradient(0 0, #eee 5px, #555 30px));
+      &:hover  { @include background-image(radial-gradient(0 0, #fff 5px, #777 30px)); }
+      &:active { @include background-image(radial-gradient(0 0, #ccc 5px, #222 30px)); }
+
+      &:after {
+        content:'\2013'; // unicode for ndash
+        color:white;
+        font-size:18px;
+        font-weight:bold;
+        margin-left:4px;
+        position:relative;
+        top: -2px;
+        text-shadow: 1px 1px 1px black;
+      }
+
+      &.closable:after {
+        content:'+';
+        top:-2px;
+      }
+    }
+    .button {
+      @include background-image(linear-gradient(
+        darken($olive, 20%),
+        darken($olive, 10%) 10%,
+        darken($olive, 20%) 20%,
+        darken($olive, 30%) 50%
+      ));
+      @include box-shadow(0 0 1px black);
+      @include border-radius(3px);
+      color: lighten($seafoam, 10%);
+      padding: 5px;
+      margin: 5px;
+    }
+    .playToggler {
+      font-weight: bold;
+      text-align: center;
+      width: 20px;
+      display: inline-block;
+    }
+  }
 }
