Fix color, start size

--- a/markup/index.html.haml
+++ b/markup/index.html.haml
@@ -19,9 +19,9 @@
         %h3 Background:
         %input.background
 
-      /.ranger
-      /  %h3 Cellsize:
-      /  .cellSize
+      .ranger
+        %h3 Cellsize:
+        %input.cellSize
 
       /.ranger
       /  %h3
