--- a/style/style.scss
+++ b/style/style.scss
@@ -1,6 +1,7 @@
 @import 'compass/css3';
 @import "compass/css3/user-interface";
 @import url('jquery.miniColors.css');
+@import url('nouislider.css');
 
 body {
   // Willow theme: http://kuler.adobe.com/#themeID/2066229
