--- a/markup/index.html.haml
+++ b/markup/index.html.haml
@@ -7,7 +7,12 @@
   %body
     %canvas
     .dashboard
-      %h1 Game of Life - Powered by WebGL
+      %h1
+        Game of Life - Powered by WebGL
+        .tiny
+          [
+          %a{'href' => 'http://github.com/jamesgary/lifeGL'} source
+          ]
       %a.button.playToggler.pause{:title => 'Pause'} I I
       %a.button.reset Reset
 
